toolchain/internal/core/analysis/testdata/valid/inline_spread_valid.vdl
// @expect-no-errors
// @assert: has-type Envelope

type Audit {
  createdAt datetime
}

type Envelope {
  payload {
    ...Audit
    data string
  }
}
