toolchain/internal/core/analysis/testdata/errors/includes/missing_include.vdl
// @expect: E001

include "./does_not_exist.vdl"

type User {
  id string
}
